Refactor dynamically generated options handling to use Optional<List<String>> for better null safety